Missing terrain in Total War: Warhammer
System information
System: Host: greg-pc Kernel: 5.4.43-59-tkg-pds x86_64 bits: 64 compiler: gcc v: 10.1.0 Desktop: KDE Plasma 5.19.2 tk: Qt 5.15.0 wm: kwin_x11 dm: LightDM Distro: Antergos Linux 2015.12-ISO-Rolling CPU: Topology: Quad Core model: Intel Core i7-4980HQ bits: 64 type: MT MCP arch: Haswell rev: 1 L2 cache: 6144 KiB flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx bogomips: 44796 Speed: 1287 MHz min/max: 800/4500 MHz Core speeds (MHz): 1: 1197 2: 1193 3: 1195 4: 1196 5: 1201 6: 1161 7: 1199 8: 1201 Graphics: Device-1: Advanced Micro Devices [AMD/ATI] Vega 10 XL/XT [Radeon RX Vega 56/64] vendor: Micro-Star MSI driver: amdgpu v: kernel bus ID: 03:00.0 chip ID: 1002:687f Display: x11 server: X.Org 1.20.8 compositor: kwin_x11 driver: amdgpu resolution: 1920x1080~144Hz s-dpi: 96 OpenGL: renderer: Radeon RX Vega (VEGA10 DRM 3.35.0 5.4.43-59-tkg-pds LLVM 11.0.0) v: 4.6 Mesa 20.2.0-devel (git-ef672183) direct render: Yes
Describe the issue
In benchmark mode, there are holes in the terrain. Units basically walking in the air. Used Benchmark settings:
Regression
Yes, last time I tested was probably 6 months ago and things rendered correctly. I will try to bisect this. But it will take some time.